# kanban_api_PFM-gsi

./: Dockerfile  Makefile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml
app/: main.py
app/crud/: crud.py
app/database/: database.py  schemas.py
app/models/: models.py
app/routes/: tasks.py
